Fixing the left/right navigation buttons on smaller screens (less than 1024px).

--- a/css/grow.css
+++ b/css/grow.css
@@ -14,4 +14,8 @@
   #mainbody {
     margin-left: 0 !important;
   }
+
+  #topLeftNavigation {
+    left: 155px !important;
+  }
 }
